# sential

./: .gitignore  ARCHITECTURE.md  Overview.md  TESTING_GUIDE.md  constants.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  utils.py
adapters/: git.py
backend/: config.py  database.py
backend/api/: health.py
cli/: build.py  constants.py  ctags.py  main.py  requirements.txt  utils.py
cli/adapters/: git.py
cli/core/: context_reader.py  discovery.py  exceptions.py  extraction.py  models.py  symbol_extractor.py
cli/test/: calculator.js  calculator.ts  index.ts  main.js
cli/test/services/: userService.ts
cli/test/test2/: api.js  dataProcessor.js
cli/test/utils/: formatters.ts
cli/test3/: config.js  logger.ts  utils.ts
cli/ui/: progress.py  progress_callback.py  prompts.py
core/: discovery.py  exceptions.py  file_io.py  models.py  processing.py  refactor.py  symbol_extractor.py  tokens.py
docs/: 01-PROJECT-SETUP.md  ARCHITECTURE.md  Research.txt
old/: .gitignore  LICENSE  README.md  constants.py  main.py  models.py  utils.py
old/adapters/: ctags.py  git.py
old/core/: categorization.py  ctags_extraction.py  doc_generator.py  llm.py  models.py  prompts.py
old_bin/: ctags-macos-arm64-2025.11.27  ctags-macos-x86_64-2025.11.27
src/: cli.ts  constants.ts  errors.ts  types.ts  utils.ts
src/adapters/: ctags.ts  git.ts
src/core/: categorization.ts  config-service.ts  file-metadata.ts  processing.ts  prompts.ts  tokens.ts  types.ts
src/generator/: helpers.ts  index.ts
src/providers/: base.ts  claude.ts  google.ts  index.ts  openai.ts  types.ts
tests/: __init__.py
tests/adapters/: __init__.py  test_ctags.py  test_git.py
tests/core/: conftest.py  test_categorization.py  test_ctags_extraction.py  test_exceptions.py  test_file_io.py  test_processing.py  test_refactor.py  test_tokens.py
tests/ui/: __init__.py  test_progress.py  test_progress_display.py
ui/: progress.py  progress_callback.py  progress_display.py  prompts.py
