[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sential"
version = "0.1.0"
description = "A local-first tool designed to generate high-signal context bridges from Git repositories"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BUSL-1.1"}
authors = [
    {name = "Sential", email = "florin@sential.ai"}
]
keywords = ["git", "code-analysis", "context-generation", "ctags", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "typer[all]==0.20.1",
    "inquirer==3.4.1",
    "tiktoken==0.12.0",
    "rich==14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
sential = "main:app"

[tool.setuptools]
packages = ["adapters", "core", "ui"]

[tool.setuptools.package-data]
"*" = ["bin/*"]

# PyInstaller configuration (for build.py)
[tool.pyinstaller]
# This section is informational - actual build is done via build.py
# The build.py script uses: --onefile --add-data=bin:bin --name=sential

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=adapters",
    "--cov=core",
    "--cov=ui",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may involve external dependencies)",
    "slow: Slow-running tests",
    "mock: Tests that use mocking",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["adapters", "core", "ui"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
