[project]
name = "sential"
version = "1.0.0"
description = "Codebase onboarding engine — understand any codebase, deeply."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BUSL-1.1" }
authors = [{ name = "Sential", email = "florin@sential.ai" }]

dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "alembic",
    "redis[hiredis]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error", "ignore::DeprecationWarning"]